# proj4sedona

./: .gitignore  PERFORMANCE.md  README.md  pom.xml
.github/: dependabot.yml
.github/workflows/: README.md  benchmarks.yml  ci.yml  codeql.yml  dependency-update.yml  integration-tests.yml  pr-checks.yml
.metals/: .gitignore  metals.lock.db  metals.mv.db
benchmark/: .gitignore  README.md  benchmark_config.py  conftest.py  pyproject.toml  pytest.ini  run_benchmarks.py  template_loader.py
benchmark/data/: wkt2_webmercator.txt
benchmark/data/wkt2/: lambert_conic.wkt  mapping.txt  nad83.wkt  nad83_vermont.wkt  utm_19n.wkt  webmercator.wkt
benchmark/templates/: BatchBenchmarkRunner.java  BenchmarkRunner.java  batch_benchmark_runner.py  benchmark_runner.py
benchmark/tests/: test_accuracy.py  test_geometry_accuracy.py  test_performance.py  test_simple.py
core/: pom.xml
core/src/main/java/org/proj4/: Proj4Java.java  Proj4Sedona.java
core/src/test/java/org/proj4/: MgrsIntegrationTest.java  PerformanceTest.java  PrecisionComparisonTest.java  Proj4JavaTest.java  Proj4SedonaDatumTest.java  Proj4SedonaTest.java  Proj4jsCompatibilityTest.java  Proj4jsTestDataCompatibilityTest.java
mgrs/: pom.xml
scripts/: run_integration_tests.sh
scripts/pyproj-reference/: compare_benchmarks.py  generate_all.py  generate_format_reference.py  generate_grid_reference.py  generate_parsing_reference.py  generate_transform_reference.py  requirements.txt  run_pyproj_benchmarks.py
src/main/java/org/datasyslab/proj4sedona/: Proj4.java
src/main/java/org/proj4/constants/: Ellipsoid.java  Values.java
src/main/java/org/proj4/core/: Projection.java
src/main/java/org/proj4sedona/: Proj4.java
src/main/java/org/proj4sedona/common/: ProjMath.java
src/main/java/org/proj4sedona/constants/: Datum.java  Ellipsoid.java  PrimeMeridian.java  Units.java  Values.java
src/main/java/org/proj4sedona/core/: DatumParams.java  DeriveConstants.java  Point.java  Proj.java  ProjectionDef.java
src/main/java/org/proj4sedona/datum/: DatumTransform.java  DatumUtils.java
src/main/java/org/proj4sedona/defs/: Defs.java  SpatialReferenceFetcher.java
src/main/java/org/proj4sedona/grid/: GeoTiffGridReader.java  GridCdnFetcher.java  GridData.java  GridInterpolator.java  GridLoader.java  NADGridHeader.java  NTV2GridReader.java  NadgridInfo.java  NadgridRegistry.java  Subgrid.java
src/main/java/org/proj4sedona/jts/: JTSGeometryTransformer.java
src/main/java/org/proj4sedona/mgrs/: MGRS.java  UPS.java
src/main/java/org/proj4sedona/parser/: CRSSerializer.java  Match.java  ProjJsonBuilder.java  ProjJsonTransformer.java  ProjString.java  WktParser.java  WktProcessor.java  WktTokenizer.java  WktUtils.java  WktVersion.java
src/main/java/org/proj4sedona/projection/: AlbersEqualArea.java  EquidistantConic.java  (+16 more)
src/test/java/org/proj4sedona/: Proj4PerformanceTest.java
src/test/resources/pyproj-reference/: format_export_reference.json  grid_transform_reference.json  parsing_reference.json  transform_reference.json
wkt-parser/: pom.xml
(+275 files in other folders)
